Added maven (probably badly) Updated some depricated code Eclipse project file